--- a/git-clones/env0.yml
+++ b/git-clones/env0.yml
@@ -3,7 +3,8 @@ deploy:
     steps:
         terraformInit:
           before:
-            - curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.node.sh | bash
+            - curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
+            - sudo apt-get install git-lfs
             - mkdir without
             - cd without
             - git lfs install
