--- a/git-clones/env0.yml
+++ b/git-clones/env0.yml
@@ -3,6 +3,7 @@ deploy:
     steps:
         terraformInit:
           before:
+            - apt-get install sudo -y
             - curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
             - sudo apt-get install git-lfs
             - mkdir without
