--- a/git-clones/env0.yml
+++ b/git-clones/env0.yml
@@ -3,9 +3,9 @@ deploy:
     steps:
         terraformInit:
           before:
-            - apt-get install sudo -y
-            - curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
-            - sudo apt-get install git-lfs
+            - apk add openssl --update-cache
+            - wget -qO- https://github.com/git-lfs/git-lfs/releases/download/v2.1.1/git-lfs-linux-amd64-2.1.1.tar.gz | tar xz
+            - mv git-lfs-*/git-lfs /usr/bin/ && rm -rf git-lfs-* && git lfs install && git lfs pull
             - mkdir without
             - cd without
             - git lfs install
