--- a/git-clones/env0.yml
+++ b/git-clones/env0.yml
@@ -4,17 +4,15 @@ deploy:
         terraformInit:
           before:
             - mkdir without
-            - cd without
-            - git clone https://github.com/kubernetes/kubernetes
-            - cd kubernetes
+            - git clone https://github.com/kubernetes/kubernetes without
+            - cd without/kubernetes
             - git checkout master
             - git submodule update --init --recursive --jobs 2
             - cd ../..
           after:
             - mkdir with
-            - cd with
-            - git clone https://github.com/kubernetes/kubernetes --no-single-branch --depth=1
-            - cd kubernetes
+            - git clone https://github.com/kubernetes/kubernetes with --no-single-branch --depth=1
+            - cd with/kubernetes
             - git fetch --prune --no-recurse-submodules --depth=1 origin master
             - git checkout master
             - git submodule update --depth=1 --init --recursive --jobs 2
