--- a/powershell/env0.yml
+++ b/powershell/env0.yml
@@ -4,4 +4,4 @@ deploy:
         setupVariables:
           after:
             - pwsh -v
-            - pwsh -Command {Write-Output 1,2,3 | Measure-Object}
+            - pwsh -Command "& {Write-Output 1,2,3 | Measure-Object}"
