--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -5,5 +5,6 @@ deploy:
     setupVariables:
       after: 
         - echo "Sleeping..."
+        - echo "Dog!"
         - sleep 10
         - echo "Good morning!"
