--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,16 @@ jobs:
     runs-on: ubuntu-16.04
     timeout-minutes: 30
     steps:
-      - name: Somethinggg
+      - name: Somethinggg1
         run: echo ${{toJson(github)}}
-      - name: Somethinggg
+      - name: Somethinggg2
         run: echo ${{github.event && 'prod' || 'dev'}}
-      - name: Somethinggg
+      - name: Somethinggg3
         run: echo ${{github.event.deployment_status && 'prod' || 'dev'}}
+      - name: Somethinggg4
+        run: echo ${{github.event.deployment.ref}}
+      - name: Somethinggg5
+        run: echo ${{GITHUB_REF}}
+      - name: Somethinggg6
+        run: echo ${{github.event.deployment.ref && GITHUB_REF}}
       
