--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -4,6 +4,6 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - echo "Sleeping....."
+        - echo "Sleepinggggg....."
         - sleep 30
         - echo "Good morning!"
