--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -4,6 +4,6 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - echo "Sleeping..."
+        - echo "Sleepinh..."
         - sleep 10
         - echo "Good morning!"
