--- a/fail/env0.yml
+++ b/fail/env0.yml
@@ -5,3 +5,9 @@ deploy:
     setupVariables:
       after: 
         - failz
+
+destroy:
+  steps:
+    setupVariables:
+      after: 
+        - failz
