--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -4,6 +4,6 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - echo "KAKI-MASTER....."
+        - echo "POOPA-MASTER....."
         - sleep 2
         - echo "Good morning!"
