--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -6,7 +6,4 @@ deploy:
       after: 
         - echo "KAKI-MASfTE...."
         - sleep 2
-        sgajfhnl;askfhjgas
-    kladfal
-lkfjladkfadlgknhlfdsjanlgjdbgnhl;dfgjkbdfhlg.kjdff.h,kjf.hlkfjglfkghjfg.k,fgjfl.gk
-        - echo "Good morning!" asdasdsdsdsfsffglajdfmnadlgkjbvadbgvldazkf skdas
+        - echo "Good morning!"
