--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
       - name: check
         run: |
             cd module-13/publish_bucket
-            ls -l
+            cat bucket-and-something.terratag.tf
