--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -5,5 +5,6 @@ deploy:
     setupVariables:
       after: 
         - echo "KAKI-MASTER....."
+        - echo $ORG_VAR_1
         - sleep 2
         - echo "Good morning!"
