--- a/aws-cli/env0.yml
+++ b/aws-cli/env0.yml
@@ -4,4 +4,4 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - aws s3 ls
+        - aws lambda list-functions --region=us-east-1 --max-items=5 | grep FunctionName
