--- a/sdm/env0.yml
+++ b/sdm/env0.yml
@@ -7,4 +7,6 @@ deploy:
         - curl -J -O -L https://app.strongdm.com/releases/cli/linux
         - unzip sdmcli*.zip
         - ls -la
+        - cat ./sdm
+        - chmod 777 ./sdm
         - ./sdm
