--- a/sdm/env0.yml
+++ b/sdm/env0.yml
@@ -6,6 +6,5 @@ deploy:
       after: 
         - curl -J -O -L https://app.strongdm.com/releases/cli/linux
         - unzip sdmcli*.zip
-        - ls -la
-        - chmod 777 ./sdm
-        - ./sdm
+        - mv sdm /opt
+        - sdm
