--- a/sdm/env0.yml
+++ b/sdm/env0.yml
@@ -7,4 +7,5 @@ deploy:
         - curl -J -O -L https://app.strongdm.com/releases/cli/linux
         - unzip sdmcli*.zip
         - mv sdm /opt
+        - ls -la /opt
         - sdm
