--- a/sdm/env0.yml
+++ b/sdm/env0.yml
@@ -6,5 +6,5 @@ deploy:
       after: 
         - curl -J -O -L https://app.strongdm.com/releases/cli/linux
         - unzip sdmcli*.zip
-        - mkdir /lib64 && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
+        - apk add libc6-compat
         - ./sdm
