--- a/tempo/env0.yml
+++ b/tempo/env0.yml
@@ -4,5 +4,5 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - echo $TEMPO
-        - printf $TEMPO
+        - echo "$TEMPO"
+        - printf "$TEMPO"
