--- a/sdm/env0.yml
+++ b/sdm/env0.yml
@@ -6,4 +6,4 @@ deploy:
       after: 
         - curl -J -O -L https://app.strongdm.com/releases/cli/linux
         - unzip sdmcli*.zip
-        - ./sdm install
+        - ./sdm install --nologin --user node
