--- a/sdm/env0.yml
+++ b/sdm/env0.yml
@@ -4,4 +4,4 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - /sdm install --nologin --user node
+        - sudo /sdm install --nologin
