--- a/checkob/env0.yml
+++ b/checkob/env0.yml
@@ -4,4 +4,4 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - pip3 install checkov
+        - pip3 install -Iv https://github.com/bridgecrewio/checkov/archive/refs/tags/2.0.250.tar.gz
