--- a/print-mount/env0.yml
+++ b/print-mount/env0.yml
@@ -5,6 +5,5 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - ls -l /mnt/env0/kushield-gke | grep eac61ad0-d9bf-430e-8f42-00a93b110188
-        - ls -l /mnt/env0/kushield-gke | grep 53447971-98b1-4520-8986-c2663a56ca61
+        - ls -lt /mnt/env0/kushield-gke
         
