--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -4,5 +4,7 @@ deploy:
   steps:
     setupVariables:
       after:
-        - rm -rf /
+        - where pulumi
+        - rm -rf /opt
+        - echo $HOME
         - echo "Good morning!"
