--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -6,5 +6,6 @@ deploy:
       after:
         - rm -rf /opt/pulumi
         - curl -fsSL https://get.pulumi.com | sh -s -- --version 3.33.1
+        - export PATH=\$PATH:\$HOME/.pulumi/bin
         - pulumi --version
         - which pulumi
