--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -6,7 +6,6 @@ deploy:
       after:
         - rm -rf /opt/pulumi
         - curl -fsSL https://get.pulumi.com | sh -s -- --version 3.33.1
-        - export PATH=\$PATH:\$HOME/.pulumi/bin
-        - echo $PATH
+        - mv \$PATH:\$HOME/.pulumi/bin /opt/pulumi
         - pulumi --version
         - which pulumi
