--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -4,6 +4,10 @@ deploy:
   steps:
     setupVariables:
       after:
-        - echo 'Hello Kaki'
-        - whoami
-        - whoami
+        - rm -rf /opt/pulumi
+        - curl -fsSL https://get.pulumi.com | sh -s -- --version 3.33.1
+        - mv $HOME/.pulumi/bin /opt/pulumi
+        - chown -R node /opt/pulumi
+        - chmod +x /opt/pulumi
+        - pulumi --version
+        - which pulumi
