--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -9,6 +9,7 @@ deploy:
         - mv $HOME/.pulumi/bin /opt/pulumi
         - chown -R node /opt/pulumi
         - chmod +x /opt/pulumi
+        - ls -R /opt/pulumi
         - ls /opt/pulumi/.pulumi
         - ls /opt/pulumi/.pulumi/bin
         - ls -R /opt/pulumi/.pulumi
