trash it already

--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -7,6 +7,4 @@ deploy:
         - rm -rf /opt/pulumi
         - curl -fsSL https://get.pulumi.com | sh -s -- --version 3.33.1
         - mv $HOME/.pulumi/bin /opt/pulumi
-        - chown -R node /opt/pulumi
-        - chmod +x /opt/pulumi
-        - /opt/pulumi/pulumi --version
+        - /opt/pulumi/pulumi version
