--- a/pulumi/aws/hello-world/env0.yml
+++ b/pulumi/aws/hello-world/env0.yml
@@ -6,6 +6,9 @@ deploy:
       after:
         - npm i
         - echo $HOME is my home
+    pulumiVersion:
+      before:
+        - echo "hara"
     pulumiLogin:
       before:
         - pulumi version
