--- a/pulumi/aws/hello-world/env0.yml
+++ b/pulumi/aws/hello-world/env0.yml
@@ -6,6 +6,7 @@ deploy:
       after:
         - npm i
         - echo $HOME is my home
+        - echo kaka
     pulumiLogin:
       before:
         - pulumi version
