--- a/cloudformation/stack.yaml
+++ b/cloudformation/stack.yaml
@@ -1,9 +1,12 @@
 AWSTemplateFormatVersion: '2010-09-09'
+Parameters:
+  Kaki:
+    Type: String
 Resources:
   WebsiteBucket:
     Type: 'AWS::S3::Bucket'
     Properties:
-      BucketName: !Join ['', ['website-bucket-cf-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]
+      BucketName: !Join [!Ref Kaki, ['website-bucket-cf-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]
       AccessControl: 'PublicRead'
       WebsiteConfiguration:
         IndexDocument: index.html
