--- a/cloudformation/hello-world/better-stack.yaml
+++ b/cloudformation/hello-world/better-stack.yaml
@@ -27,3 +27,7 @@ Outputs:
   BucketUrl:
     Value: !GetAtt WebsiteBucket.WebsiteURL
     Description: 'URL of the S3 bucket'
+
+  BucketArn:
+    Value: !GetAtt WebsiteBucket.Arn
+    Description: 'ARN of the S3 bucket'
