--- a/cloudformation/buckets.yaml
+++ b/cloudformation/buckets.yaml
@@ -35,7 +35,7 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: index.html
-  WebsiteBucketPolicy:
+  WebsiteBucketPolicy2:
     Type: 'AWS::S3::BucketPolicy'
     Properties:
       Bucket: !Ref WebsiteBucket2
@@ -59,7 +59,7 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: index.html
-  WebsiteBucketPolicy:
+  WebsiteBucketPolicy3:
     Type: 'AWS::S3::BucketPolicy'
     Properties:
       Bucket: !Ref WebsiteBucket3
@@ -83,7 +83,7 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: index.html
-  WebsiteBucketPolicy:
+  WebsiteBucketPolicy4:
     Type: 'AWS::S3::BucketPolicy'
     Properties:
       Bucket: !Ref WebsiteBucket4
@@ -107,7 +107,7 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: index.html
-  WebsiteBucketPolicy:
+  WebsiteBucketPolicy5:
     Type: 'AWS::S3::BucketPolicy'
     Properties:
       Bucket: !Ref WebsiteBucket5
@@ -131,7 +131,7 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: index.html
-  WebsiteBucketPolicy:
+  WebsiteBucketPolicy6:
     Type: 'AWS::S3::BucketPolicy'
     Properties:
       Bucket: !Ref WebsiteBucket6
@@ -150,3 +150,19 @@ Outputs:
   BucketUrl:
     Value: !GetAtt WebsiteBucket.WebsiteURL
     Description: 'URL of the S3 bucket'
+  BucketUrl2:
+    Value: !GetAtt WebsiteBucket2.WebsiteURL
+    Description: 'URL of the S3 bucket'
+  BucketUrl3:
+    Value: !GetAtt WebsiteBucket3.WebsiteURL
+    Description: 'URL of the S3 bucket'
+  BucketUrl4:
+    Value: !GetAtt WebsiteBucket4.WebsiteURL
+    Description: 'URL of the S3 bucket'
+  BucketUrl5:
+    Value: !GetAtt WebsiteBucket5.WebsiteURL
+    Description: 'URL of the S3 bucket'
+  BucketUrl6:
+    Value: !GetAtt WebsiteBucket6.WebsiteURL
+    Description: 'URL of the S3 bucket'
+    
