--- a/cloudformation/hello-world/better-stack.yaml
+++ b/cloudformation/hello-world/better-stack.yaml
@@ -3,7 +3,7 @@ Resources:
   WebsiteBucket:
     Type: 'AWS::S3::Bucket'
     Properties:
-      BucketName: !Join ['', ['website-bucket-cf-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]
+      BucketName: !Join ['', ['website-bucket-cf-2-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]
       AccessControl: 'PublicRead'
       WebsiteConfiguration:
         IndexDocument: index.html
