--- a/null-with-sleep/env0.workflow.yml
+++ b/null-with-sleep/env0.workflow.yml
@@ -2,10 +2,10 @@ environments:
   service1:
     name: service1
     templateName: Test
-    workspace: workspace1
+    workspace: a-workspace
     needs: []
   service3:
     name: service2
     templateName: Test
-    workspace: workspace2
+    workspace: b-workspace
     needs: [service1]
