--- a/null-with-sleep/env0.workflow.yml
+++ b/null-with-sleep/env0.workflow.yml
@@ -2,10 +2,5 @@ environments:
   service1:
     name: service1
     templateName: Test
-    workspace: nonnon-workspace
-    needs: []
-  service3:
-    name: service2
-    templateName: Test
-    workspace: nonnon-workspace
+    workspace: nonnonsss-workspace
     needs: []
