--- a/null-with-sleep/env0.workflow.yml
+++ b/null-with-sleep/env0.workflow.yml
@@ -2,5 +2,5 @@ environments:
   service1:
     name: service1
     templateName: Test
-    workspace: 'nonnonsss-workspace'
+    workspace: 'asdasdasd-workspace'
     needs: []
