--- a/wflow/env0.workflow.yml
+++ b/wflow/env0.workflow.yml
@@ -2,9 +2,9 @@ environments:
   service1:
     name: service1
     templateName: Test
-    workspace: workspace1
+    workspace: asdasdasd-workspace
     needs: []
-  service3:
+  service2:
     name: service2
     templateName: Test
     workspace: workspace1
