--- a/wflow/env0.workflow.yml
+++ b/wflow/env0.workflow.yml
@@ -6,6 +6,6 @@ environments:
     needs: []
   service2:
     name: service2
-    templateName: Test
+    templateName: Testasfasfd
     workspace: workspace1
     needs: [service1]
