--- a/wflow/env0.workflow.yml
+++ b/wflow/env0.workflow.yml
@@ -2,8 +2,10 @@ environments:
   service1:
     name: service1
     templateName: Test
+    workspace: 123
     needs: []
   service2:
     name: service2
     templateName: Test
+    workspace: 123
     needs: [service1]
