--- a/wflow/env0.workflow.yml
+++ b/wflow/env0.workflow.yml
@@ -2,10 +2,10 @@ environments:
   service1:
     name: service1
     templateName: Test
-    workspace: 123
+    workspace: workspace
     needs: []
   service2:
     name: service2
     templateName: Test
-    workspace: 123
+    workspace: workspace
     needs: [service1]
