--- a/wflow2/env0.workflow.yaml
+++ b/wflow2/env0.workflow.yaml
@@ -2,15 +2,10 @@ environments:
   service1:
     name: service1
     templateName: Test
-    workspace: for_sure_np
+    workspace: workspace
     needs: []
   service2:
     name: service2
     templateName: Test
-    workspace: another_np
+    workspace: some
     needs: [service1]
-  service3:
-    name: service3
-    templateName: Test
-    workspace: workspace
-    needs: [service2]
