--- a/wflow/env0.workflow.yml
+++ b/wflow/env0.workflow.yml
@@ -6,6 +6,5 @@ environments:
     needs: []
   service2:
     name: service2
-    templateName: Test2
-    workspace: workspace
+    templateName: wflow2
     needs: [service1]
