--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -4,4 +4,4 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - echo "Good morning!aaaaa"
+        - echo "Good morning!skipitydoopapa"
