--- a/wflow2/env0.workflow.yaml
+++ b/wflow2/env0.workflow.yaml
@@ -3,10 +3,5 @@ environments:
     name: service3
     templateName: Test
     workspace: workspace
-    needs: [service4]
-  service4:
-    name: service3
-    templateName: Test
-    workspace: workspace
-    needs: [service3]  
+    needs: []
 
